fix: UISelectFromModelWithSearchModal style added {flex-wrap: no-wrap;}

--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -15,3 +15,7 @@
 .is-vertical-middle {
     vertical-align: middle;
 }
+
+.is-no-flex-wrap {
+    flex-wrap: nowrap;
+}
